--- a/bitcamp2017/templates/index.html
+++ b/bitcamp2017/templates/index.html
@@ -102,10 +102,10 @@ Our custom title
         </div>
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
-                <p>Insert descriptions here</p>
+                <p>This provides an interface for a patient to write and express themselves without any pressure from the outside world. </p>
             </div>
             <div class="col-lg-4">
-                <p>More words</p>
+                <p>All their entries are shared with their therapist to allow them to the randge of emotions and thoughts within the patient allowing for better diagnosis of mental health problems</p>
             </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <a href="#" class="btn btn-lg btn-outline">
