--- a/bitcamp2017/templates/index.html
+++ b/bitcamp2017/templates/index.html
@@ -8,7 +8,7 @@ Our custom title
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <img class="img-responsive" src="/static/img/profile.png" alt="">
+                <img class="img-responsive" src="/static/img/profile.jpg" width="400" height="200"alt="">
                 <div class="intro-text">
                     <span class="name">LifeOk</span>
                     <hr class="star-light">
@@ -23,7 +23,7 @@ Our custom title
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>Portfolio</h2>
+                <h2>How</h2>
                 <hr class="star-primary">
             </div>
         </div>
@@ -35,7 +35,7 @@ Our custom title
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="/static/img/portfolio/cabin.png" class="img-responsive" alt="">
+                  <center><img src="/static/img/portfolio/a.png" class="img-responsive" width="250" height="250" alt=""></center>
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -45,7 +45,7 @@ Our custom title
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="/static/img/portfolio/cake.png" class="img-responsive" alt="">
+                  <center><img src="/static/img/portfolio/b.png" class="img-responsive" width="250" height="250" alt=""></center>
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -55,7 +55,7 @@ Our custom title
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="/static/img/portfolio/circus.png" class="img-responsive" alt="">
+                    <center><img src="/static/img/portfolio/c.png" class="img-responsive" width="250" height="250" alt=""></center>
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -65,7 +65,7 @@ Our custom title
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="/static/img/portfolio/game.png" class="img-responsive" alt="">
+                    <center><img src="/static/img/portfolio/e.png" class="img-responsive" width="250" height="250" alt=""></center>
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -75,7 +75,7 @@ Our custom title
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="/static/img/portfolio/safe.png" class="img-responsive" alt="">
+                    <center><img src="/static/img/portfolio/d.png" class="img-responsive" width="250" height="250" alt=""></center>
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -85,7 +85,7 @@ Our custom title
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img src="/static/img/portfolio/submarine.png" class="img-responsive" alt="">
+                    <center><img src="/static/img/portfolio/f.png" class="img-responsive" width="250" height="250" alt=""></center>
                 </a>
             </div>
         </div>
@@ -102,14 +102,14 @@ Our custom title
         </div>
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
-                <p>This provides an interface for a patient to write and express themselves without any pressure from the outside world. </p>
+                <p>This provides an interface for a patient to write and express themselves without any pressure from the outside world.</p>
             </div>
             <div class="col-lg-4">
                 <p>All their entries are shared with their therapist to allow them to the randge of emotions and thoughts within the patient allowing for better diagnosis of mental health problems</p>
             </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <a href="#" class="btn btn-lg btn-outline">
-                    <i class="fa fa-button"></i> Button
+                    <i class="fa fa-button"></i> Back To Top
                 </a>
             </div>
         </div>
@@ -120,7 +120,7 @@ Our custom title
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>Contact Me</h2>
+                <h2>Write</h2>
                 <hr class="star-primary">
             </div>
         </div>
