--- a/bitcamp2017/templates/layouts/layout1.html
+++ b/bitcamp2017/templates/layouts/layout1.html
@@ -34,7 +34,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">Life Ok</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -43,13 +43,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#portfolio">How</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#contact">Write</a>
                     </li>
                 </ul>
             </div>
@@ -68,7 +68,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                        <p>The internet</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
@@ -101,7 +101,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; This Copyright is Fake 2017
+                        Copyright &copy; Schezwan Sauce 2017
                     </div>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="/static/img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
+
                             <p>Insert more info here</p>
                             <ul class="list-inline item-details">
                                 <li>
@@ -171,7 +171,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
+
                             <p>Insert info here</p>
                             <ul class="list-inline item-details">
                                 <li>
@@ -214,7 +214,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
+
                             <p>Insert info here</p>
                             <ul class="list-inline item-details">
                                 <li>
@@ -257,7 +257,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="/static/img/portfolio/game.png" class="img-responsive img-centered" alt="">
+
                             <p>Insert more here</p>
                             <ul class="list-inline item-details">
                                 <li>
@@ -300,7 +300,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="/static/img/portfolio/safe.png" class="img-responsive img-centered" alt="">
+                          =
                             <p>Insert more here</p>
                             <ul class="list-inline item-details">
                                 <li>
@@ -343,8 +343,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="/static/img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
-                            <p>Insert more here</p>
+
                             <ul class="list-inline item-details">
                                 <li>
                                     Client:
