--- a/bitcamp2017/templates/index.html
+++ b/bitcamp2017/templates/index.html
@@ -1,14 +1,16 @@
 ﻿{% extends "layouts/layout1.html" %}
 {% block title %}
-Our custom title
+Life Ok
 {% endblock %}
 {% block content %}
+
     <!-- Header -->
 <header>
+
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <img class="img-responsive" src="/static/img/profile.jpg" width="400" height="200"alt="">
+                <img class="img-responsive" src="/static/img/logo.png" width="300" height="100"alt="">
                 <div class="intro-text">
                     <span class="name">LifeOk</span>
                     <hr class="star-light">
@@ -56,36 +58,6 @@ Our custom title
                         </div>
                     </div>
                     <center><img src="/static/img/portfolio/c.png" class="img-responsive" width="250" height="250" alt=""></center>
-                </a>
-            </div>
-            <div class="col-sm-4 portfolio-item">
-                <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <i class="fa fa-search-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <center><img src="/static/img/portfolio/e.png" class="img-responsive" width="250" height="250" alt=""></center>
-                </a>
-            </div>
-            <div class="col-sm-4 portfolio-item">
-                <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <i class="fa fa-search-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <center><img src="/static/img/portfolio/d.png" class="img-responsive" width="250" height="250" alt=""></center>
-                </a>
-            </div>
-            <div class="col-sm-4 portfolio-item">
-                <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <i class="fa fa-search-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <center><img src="/static/img/portfolio/f.png" class="img-responsive" width="250" height="250" alt=""></center>
                 </a>
             </div>
         </div>
