--- a/bitcamp2017/templates/layouts/layout1.html
+++ b/bitcamp2017/templates/layouts/layout1.html
@@ -126,10 +126,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>What we used</h2>
                             <hr class="star-primary">
 
-                            <p>Insert more info here</p>
+                            <p>We implemented this website using python, flask, bootstrap, and php within 36 hours.</p>
                             <ul class="list-inline item-details">
                                 <li>
                                     Client:
@@ -140,7 +140,7 @@
                                 <li>
                                     Date:
                                     <strong>
-                                        <a href="http://startbootstrap.com">April 2014</a>
+                                        <a href="http://startbootstrap.com">April 2017</a>
                                     </strong>
                                 </li>
                                 <li>
@@ -169,10 +169,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>How the idea started</h2>
                             <hr class="star-primary">
 
-                            <p>Insert info here</p>
+                            <p>At first we envisioned creating an android app using Andriod Studios but soon we figured this was a bit too ambition for our experience and time frame so we switched over to web development.</p>
                             <ul class="list-inline item-details">
                                 <li>
                                     Client:
@@ -183,7 +183,7 @@
                                 <li>
                                     Date:
                                     <strong>
-                                        <a href="http://startbootstrap.com">April 2014</a>
+                                        <a href="http://startbootstrap.com">April 2017</a>
                                     </strong>
                                 </li>
                                 <li>
@@ -212,10 +212,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Challenges</h2>
                             <hr class="star-primary">
 
-                            <p>Insert info here</p>
+                            <p>We were able to finish this project even though all the challenges that faced us and we learned a lot about coding wesites/apps. Somehow we even overcame the wifi.</p>
                             <ul class="list-inline item-details">
                                 <li>
                                     Client:
@@ -226,7 +226,7 @@
                                 <li>
                                     Date:
                                     <strong>
-                                        <a href="http://startbootstrap.com">April 2014</a>
+                                        <a href="http://startbootstrap.com">April 2017</a>
                                     </strong>
                                 </li>
                                 <li>
@@ -243,134 +243,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Project Title</h2>
-                            <hr class="star-primary">
 
-                            <p>Insert more here</p>
-                            <ul class="list-inline item-details">
-                                <li>
-                                    Client:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>
-                                    Date:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>
-                                    Service:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Project Title</h2>
-                            <hr class="star-primary">
-                          =
-                            <p>Insert more here</p>
-                            <ul class="list-inline item-details">
-                                <li>
-                                    Client:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>
-                                    Date:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>
-                                    Service:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Project Title</h2>
-                            <hr class="star-primary">
-
-                            <ul class="list-inline item-details">
-                                <li>
-                                    Client:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>
-                                    Date:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>
-                                    Service:
-                                    <strong>
-                                        <a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- jQuery -->
     <script src="/static/js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
